# homelab

./: .gitattributes  .gitignore  .infisical.json  .sops.yaml  LLM_CONTEXT.md  Makefile  README.md  client.sh  container.sh  host.sh  install-host-service.sh  unfinished-features.md
.client-state/transactions/: add_stack-cloudflared-1780718915.json  add_stack-cloudflared-1781162194.json  add_stack-downloader-1781343185.json  add_stack-gateway-1781343264.json  add_stack-media-1781343222.json  add_stack-monitoring-1781343253.json  add_stack-paperless-1781343113.json  add_stack-test-1781158805.json  add_stack-todo-1781343286.json  delete_stack-cloudflared-1780719345.json  delete_stack-downloader-1781432516.json  delete_stack-gateway-1781432506.json  delete_stack-media-1781432501.json  delete_stack-monitoring-1781432496.json  delete_stack-paperless-1781432521.json  delete_stack-test-1781162148.json  delete_stack-todo-1781432490.json
.github/: copilot-instructions.md
.github/agents/: documenter.agent.md
.github/instructions/: docker-compose.instructions.md
.github/workflows/: host-release.yml  lxc-image.yml
.latch/: config.toml  staging.json
.latch/dev/: client-app__.env.enc  config__.env.enc  config__promtail__.env.enc  group.promtail_config.enc  host-daemon__.env.enc  lxc-daemon__.env.enc  stacks__cloudflared__cloudflared__.env.enc
apps/: CLIENT  HOST  LXC
apps/media/: pre-sync.sh
client-app/: .env.example  .gitignore  Cargo.toml
client-app/src/: app.rs  app_list.rs  backup_schedule.rs  blast_radius.rs  events.rs  gitops.rs  latch.rs  main.rs  opnsense.rs  scaffold.rs  shell.rs  ssh_config.rs  stack_features.rs  telemetry.rs  theme.rs  transactions.rs  ui.rs  ws_client.rs
config/: .env.example  env.bundle  env.bundle.example
config/promtail/: .env.example
docs/: 01-architecture.md  02-ground-zero.md  03-bootstrapping-and-networking.md  04-gitops-and-lifecycle.md  05-backups-and-host-management.md  06-user-guide-and-responsibilities.md  07-troubleshooting-and-debugging.md  08-centralized-monitoring.md  ARCHIVED_DEEPDIVE_DOCS.md  CONTRIBUTING.md  DEBUGGING_SYNC_STALL.md  FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES_AGE_BASED_RETENTION.md  LLM_CONTEXT.md  PHILOSOPHY.md  SAFETY.md  architecture.md  client-features.md  debug.md  deployment.md  host-features.md  latch-clone-setup.md  lxc-compose-format.md  lxc-features.md  ui-guidelines.md  usecase-strategy.md
docs/examples/: lxc-compose.example.yml  pre-sync-template.sh
docs/refactor/: CLIENT_REFACTOR_STATUS.md  phase1.md  phase2.md  phase3.md  phase4.md  refactor-features.md
docs/usecases/: activate-stack.md  add-app-to-stack.md  add-core-app-to-stack.md  add-stack.md  backup-scheduling.md  bind-mounts.md  deactivate-stack.md  delete-app-from-stack.md  delete-core-app-from-stack.md  delete-stack.md  (+15 more)
host-daemon/: .env.example  Cargo.toml  UI_MOCKUP.md
host-daemon/src/: api.rs  api.rs.fixed  app.rs  backup.rs  bootstrap.rs  failsafe.rs  hardware.rs  liveness.rs  main.rs  policy.rs  provision.rs  self_update.rs  storage.rs  theme.rs
lxc-daemon/: .env.example  Cargo.toml  Dockerfile  UI_MOCKUP.md
lxc-daemon/src/: api.rs  app.rs  docker.rs  gitops.rs  main.rs  mounts.rs  restore.rs  self_update.rs  theme.rs
secrets/: age.key.enc
(+305 files in other folders)
