[package]
name = "client-app"
version = "0.1.15"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
color-eyre = "0.6"
askama = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
futures = "0.3"
tui-input = "0.8"
tokio-tungstenite = "0.21"
dotenvy = "0.15"

[[bin]]
name = "CLIENT"
path = "src/main.rs"
