[package]
name = "host-daemon"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "HOST"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
