[package]
name = "lxc-daemon"
version = "1.0.40"
edition = "2021"

[[bin]]
name = "LXC"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
